@@ -7,7 +7,7 @@
  */
 
 #include <stdlib.h>
-#include <menu.h> /* from the curses library, needed for the ITEM type */
+#include <ncursesw/menu.h> /* from the curses library, needed for the ITEM type */
 #include "bst.h"
 #include "messages_rmw.h"
 
@@ -29,9 +29,10 @@ create_node (char *data, char *desc)
   return new_node;
 }
 
-/*
-    insert a new node into the BST
-*/
+/*!
+ * Insert a new node into the binary search tree; used in
+ * @ref restore_select()
+ */
 node *
 insert_node (node * root, comparer strcasecmp, char *data, char *desc)
 {
